[package]
name = "opaque-wasm"
version = "2.1.0"
authors = ["Marcin Lazar <marcin.lazar@pm.me>", "Hawkheart", "r0kk3rz"]
edition = "2018"
repository = "https://github.com/marucjmar/opaque-wasm"
keywords = ["cryptography", "crypto", "opaque", "passwords", "authentication", "wasm", "js", "browser", "webassembly", "node", "wasm-pack", "bindgen", "wasm-bindgen"]
description = "An implementation of the OPAQUE key exchange protocol in WASM(WebAssembly)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "client", "server"]
client = ["console_error_panic_hook", "wee_alloc"]
server = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
opaque-ke = { version = "2", features = ["argon2"] }
rand = { version = "0.8.3" }
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
p256 = { version = "0.11", default-features = false, features = [
  "hash2curve",
  "voprf",
] }
argon2 = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = "debuginfo"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
